--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "draft-js": "^0.10.5",
+    "draft-js-export-html": "^1.3.3",
+    "draft-js-import-html": "^1.3.3",
     "firebase": "^6.2.0",
     "react": "^16.8.6",
+    "react-awesome-modal": "^2.0.5",
+    "react-beautiful-dnd": "^11.0.4",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-dropdown": "^1.6.4",
     "react-icons": "^3.7.0",
+    "react-responsive-carousel": "^3.1.49",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
