--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "draft-js-export-html": "^1.3.3",
     "draft-js-import-html": "^1.3.3",
     "firebase": "^6.2.0",
+    "lodash": "4.17.13",
+    "lodash.template": "^4.5.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-awesome-modal": "^2.0.5",
     "react-beautiful-dnd": "^11.0.4",
