--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "firebase": "^6.2.0",
     "lodash": "4.17.13",
     "lodash.template": "^4.5.0",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-awesome-modal": "^2.0.5",
     "react-beautiful-dnd": "^11.0.4",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap-typeahead": "^3.4.7",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-dropdown": "^1.6.4",
     "react-icons": "^3.7.0",
+    "react-redux": "^7.1.0",
     "react-responsive-carousel": "^3.1.49",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-spinners": "^0.5.4",
     "react-transition-group": "^4.1.1",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
